[package]
name = "theme-sender"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "theme-sender"
path = "src/main.rs"

[[bin]]
name = "theme-override"
path = "src/override.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
paho-mqtt = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
sunrise = "2.1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
